[package]
name = "rtheme-hell-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.1", package = "gtk4", features = ["v4_8"] }
hex_color = { version = "2.0.0", features = ["rand"] }
adw = { version = "0.2.0", package = "libadwaita" }
log = "0.4.17"
once_cell = "1.16.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
dirs = "4.0.0"
